# Monitoring_project_so1

./: .clang-format  CMakeLists.txt  INSTALL.md  README.md  config.json
.github/actions/documentation/: action.yml
.github/workflows/: QAWorkflow.yml
include/: expose_metrics.h  metrics.h
lib/prom/: CMakeLists.txt
lib/promhttp/: CMakeLists.txt
src/: expose_metrics.c  main.c  metrics.c
